tests/functional2/lang/attrs/parse-fail-duplicate-1.err.exp
error: attribute 'x' already defined at /pwd/in.nix:2:3
       at /pwd/in.nix:4:3:
            3|   y = 456;
            4|   x = 789;
             |   ^
            5| }
